# serial-perf

./: Cargo.toml  LICENSE  README.md
serial-perf/: Cargo.toml
serial-perf/benches/: counting_cnt_stats.rs  counting_no_stats.rs  counting_rate_stats.rs
serial-perf/examples/: linux_counter.rs  linux_loopback.rs  linux_rate_measure_sink.rs
serial-perf/src/: clock.rs  lib.rs
serial-perf/src/byte_rate/: mod.rs  rate.rs
serial-perf/src/byte_rate/limit/: mod.rs  polling.rs
serial-perf/src/byte_rate/limit/limited_serial/: mod.rs  nb.rs
serial-perf/src/byte_rate/measure/: avg.rs  interval.rs  mod.rs
serial-perf/src/counting/: counter.rs  mod.rs  nb.rs  rx_state.rs  tx_state.rs
serial-perf/src/loopback/: mod.rs  nb.rs
serial-perf/src/statistics/: avg_rate.rs  counting.rs  dummy.rs  interval_rate.rs  mod.rs
