[package]
name = "serial-perf"
description = "A serial port performance test methods"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["embedded-timers/std"]

[dependencies]
embedded-hal-nb = "1"
embedded-timers = "0.3.0"
heapless = "0.8"

[dev-dependencies]
linux-embedded-hal = "0.4"
clap = { version = "4.5", features = ["derive"] }
nb = "1.1.0"
anyhow = "1"


[[example]]
name = "linux_loopback"
required-features = ["std"]

[[example]]
name = "linux_counter"
required-features = ["std"]
